@startuml
'CanInputは"入力を受け付けるか"を司る
'=> IInputProviderでCanInputを実装することを担保するのは妥当？

'各PresenterがIInputProviderの入力をある程度加工して登録する
'=> 各PresenterがCanInputを判断する(IObservable.Where())事になる
class MonoBehaviour { }

package Input {
    class KeyInputProvider {
    }
    
    interface IInputProvider {
        +canInput : bool
        GetFrontWheelAxis() : IReadonlyReactiveProperty<float>
        GetFrontWheelJump() : IObservable<Unit>
        GetBackWheelAxis() : IReadonlyReactiveProperty<float>
        GetRearWheelJump() : IObservable<Unit>
    }

    KeyInputProvider ..|> IInputProvider
}
package PlayerTricycle {
    class TricycleStatus <<ScriptableObject>> {
        RotateSpeed : float
    }
    
    class WheelRotatePresenter <<IInitializable>> {
        RegisterRotate() : void
    }
    
    class WheelJumpPresenter <<IInitializable>> {
        RegisterJump() : void
    }
    
    class WheelCalculator {
        tricycleStatus : TricycleStatus
        Calculate() : float
    }
    
    interface IWheelRotatable {
        Rotate(axis : float) : void
    }
    
    interface IWheelJumpable {
        Jump(power : float) : void
        IsGround : bool
    }
    
    class WheelBehaviour {
        Rotate(axis : float) : void
    }
    
    class TricycleBehaviour {
        FrontWheel : WheelBehaviour
        RearWheel : WheelRotatable
    }
    
    TricycleBehaviour --|> MonoBehaviour
    WheelBehaviour --|> MonoBehaviour

    WheelBehaviour ..|> IWheelRotatable
    WheelBehaviour ..|> IWheelJumpable
    
    WheelRotatePresenter ..> IInputProvider
    WheelRotatePresenter ..> TricycleBehaviour
    WheelRotatePresenter ..> WheelCalculator
    WheelCalculator ..> TricycleStatus
    
    WheelJumpPresenter ..> IInputProvider
    WheelJumpPresenter ..> TricycleBehaviour
    
    TricycleBehaviour ..> WheelBehaviour
}
@enduml
